--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,6 @@ body {
   border: 2px solid black;
   width: 300px;
   height: 500px;
-  /* text-align: center; */
   margin: auto;
 }
 
@@ -29,8 +28,31 @@ body {
   background-color: rgb(237, 237, 237);
 }
 
+.leave-chat-btn {
+  position: absolute;
+  left: 3px;
+  border-radius: 40px;
+  width: 25px;
+  height: 25px;
+  font-size: 15px;
+  padding-right: 10px;
+  margin-left: 5px;
+  background-color: rgb(0, 81, 255);
+  color: white;
+}
+
+.back-icon {
+  position: absolute;
+  left: 10px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.back-icon:hover {
+  opacity: 0.6;
+}
+
 .body-container {
-  /* border: 2px solid green; */
   padding-top: 8px;
   width: 100%;
   flex-grow: 1;
@@ -48,7 +70,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* border-top: 2px solid black; */
   width: 100%;
   height: 40px;
 }
@@ -66,7 +87,7 @@ body {
   outline: none;
 }
 
-.send-message-btn {
+/* .send-message-btn {
   position: absolute;
   right: 3px;
   border-radius: 40px;
@@ -77,19 +98,13 @@ body {
   margin-right: 5px;
   background-color: rgb(0, 81, 255);
   color: white;
-}
+} */
 
-.leave-chat-btn {
+.send-message-icon {
   position: absolute;
-  left: 3px;
-  border-radius: 40px;
-  width: 25px;
-  height: 25px;
-  font-size: 15px;
-  padding-right: 10px;
-  margin-left: 5px;
-  background-color: rgb(0, 81, 255);
-  color: white;
+  right: 9px;
+  cursor: pointer;
+  font-size: 23px;
 }
 
 .message-received-container,
@@ -100,26 +115,34 @@ body {
   width: max-content;
   clear: both;
 }
-.message-received-container {
+
+.left {
   float: left;
 }
 
-.message-sent-container {
+.right {
   float: right;
 }
 
-.message-received {
+.message-container {
+  display: block;
+  margin: 2px 10px;
+  max-width: 250px;
+  width: max-content;
+  clear: both;
+}
+
+.message {
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.sent {
   background: lightgray;
-  border-radius: 10px;
-  padding: 10px;
-  float: left;
 }
 
-.message-sent {
+.received {
   background: rgb(0, 81, 255);
-  border-radius: 10px;
-  padding: 10px;
-  float: right;
 }
 
 .msg-sender {
@@ -131,22 +154,12 @@ body {
 
 /* Home */
 
-.title {
-  text-align: center;
-}
-
 #home-form {
   display: flex;
-  /* border: 2px solid black; */
   width: 300px;
   height: 200px;
   margin: auto;
   justify-content: center;
-  /* align-items: center; */
-}
-
-.form-content-container {
-  width: fit-content;
 }
 
 .input-label {
@@ -158,7 +171,6 @@ body {
 }
 
 .form-input {
-  /* width: 200px; */
   width: 300px;
   height: 40px;
   margin: 10px;
@@ -176,20 +188,6 @@ body {
   text-align: center;
 }
 
-.join-room-btn,
-.add-contact-btn,
-.private-message-btn {
-  width: 300px;
-  height: 40px;
-  margin-top: 10px;
-  /* border-radius: 30px; */
-  border: none;
-  background-color: black;
-  font-weight: bold;
-  color: white;
-  cursor: pointer;
-}
-
 .add-contact-btn,
 .private-message-btn {
   margin: 20px 0;
@@ -198,12 +196,10 @@ body {
 .join-room-btn:active,
 .add-contact-btn:active,
 .private-message-btn:active {
-  /* background-color: rgb(44, 44, 44); */
   opacity: 0.6;
 }
 
 .contact-select {
-  /* margin: 50px; */
   width: 300px;
   display: block;
   margin: auto;
@@ -211,20 +207,19 @@ body {
 
 /* Login */
 
-.login-container {
+.form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* text-align: center; */
 }
 
-.login-title {
+.title {
   color: green;
+  text-align: center;
 }
 
-.login-input {
-  /* display: block; */
+.form-input {
   width: 300px;
   height: 40px;
   margin: 10px;
@@ -237,65 +232,51 @@ body {
   outline: none;
 }
 
-.login-page-btn {
+.form-btn {
   width: 300px;
   height: 40px;
   margin-top: 20px;
-  /* border-radius: 30px; */
   border: none;
   background-color: green;
   font-weight: bold;
 }
 
-.login-page-btn:hover {
+.form-btn:hover {
   cursor: pointer;
 }
 
-.login-page-btn:active {
+.form-btn:active {
   background-color: darkgreen;
 }
 
 .link-container {
-  margin-top: 80px;
+  margin-top: 30px;
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
 }
 
-.login-link,
-.logout-link,
-.contacts-link,
-.delete-link,
-.forgot-password-link {
+.link {
   font-weight: bold;
   text-decoration: none;
   color: black;
   cursor: pointer;
-}
-
-.logout-link,
-.contacts-link,
-.logout-link,
-.delete-link,
-.forgot-password-link {
-  display: block;
   text-align: center;
   margin-top: 10px;
   color: rgb(9, 8, 8);
 }
 
-.logout-link:hover,
-.contacts-link:hover,
-.logout-link:hover,
-.forgot-password-link:hover {
+.hover {
   opacity: 0.6;
 }
 
-.contacts-link {
+.contacts {
   font-size: 20px;
   color: blue;
 }
 
-.border {
+.border,
+.contacts-border {
   display: inline-block;
   width: 400px;
   height: 400px;
@@ -304,12 +285,21 @@ body {
   transform: translateX(-50%);
 }
 
-/* contacts */
-
 .contacts-border {
   height: 500px;
 }
 
-.contacts-title {
+/* contacts */
+
+.black {
+  color: black;
+}
+
+.black-background {
+  background-color: black;
+  color: white;
+}
+
+.margin-top {
   margin-top: 60px;
 }
