added loading message when connecting to backend and changed README

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -290,3 +290,13 @@ body {
 .margin-top {
   margin-top: 60px;
 }
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 400px;
+  height: 400px;
+  background-color: darkgray;
+  margin: auto;
+}
